fix(f010): harden search coordinator before merge